Added information to TheWall Tab
Added more information to the The Wall tab on the about page

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 				 
 			<!-- The Wall -->
 				 <div class="tab-pane fade" id="thewall">
-                 <p><a href="img/thewall.jpg" data-toggle="lightbox" data-title="The Wall"><img src="img/thewall.jpg" class="pull-left img4"></a> One of the biggest setpieces in Game of Thrones is The Wall. The wall keeps out the army of the dead.</p>
+                 <p><a href="img/thewall.jpg" data-toggle="lightbox" data-title="The Wall"><img src="img/thewall.jpg" class="pull-left img4"></a> The Wall is a colossal fortification which stretches for 100 leagues (300 miles) along the northern border of the Seven Kingdoms, defending the realm from the wildlings who live beyond. The Wall is reported to be over 700 feet tall and is made of solid ice. It was supposedly constructed using both magic and mundane means some eight millennia ago, in the aftermath of the Long Night to defend the realm against the White Walkers who apparently dwell in the far north, though they are now considered myths by most.</p>
                  <p><a href="#" class="btn btn-danger btn-sm">Read more >></a></p>
                 </div>
                 
